--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,5 +20,9 @@
     "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   }
 }
